src/snapshots/avro_generator__ir__parser_on_all_schemas@05_recursive_record.avsc.snap
---
source: src/ir.rs
expression: ir_as_json
input_file: src/test_schemas/05_recursive_record.avsc
---
[
  {
    "Record": {
      "name": "com.example.recursive.Node",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "value",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "next",
            "doc": null,
            "ty": {
              "Option": {
                "Record": "com.example.recursive.Node"
              }
            },
            "default": "Null"
          }
        ]
      }
    }
  }
]
