src/snapshots/avro_generator__ir__recursive_record_schema.snap
---
source: src/ir.rs
expression: schema_ir
---
[
    Record(
        NamedType {
            name: "com.example.LongList",
            doc: None,
            inner: RecordDetails {
                fields: [
                    FieldIr {
                        name: "value",
                        doc: None,
                        ty: Long,
                        default: None,
                    },
                    FieldIr {
                        name: "next",
                        doc: None,
                        ty: Option(
                            Null,
                        ),
                        default: None,
                    },
                ],
            },
        },
    ),
]
